--- a/views/includes/profileShared.ejs
+++ b/views/includes/profileShared.ejs
@@ -15,7 +15,7 @@
         </h2>
       
         <div class="profile-nav nav nav-tabs pt-2 mb-4">
-          <a href="/profile/<%=profileUsername%>" class="profile-nav-link nav-item nav-link active">Posts: 3</a>
-          <a href="/profile/<%=profileUsername%>/followers" class="profile-nav-link nav-item nav-link ">Followers: 3</a>
-          <a href="/profile/<%=profileUsername%>/following" class="profile-nav-link nav-item nav-link ">Following: 2</a>
+          <a href="/profile/<%=profileUsername%>" class="profile-nav-link nav-item nav-link <%= currentPage == 'posts' ?'active':''%>">Posts: 3</a>
+          <a href="/profile/<%=profileUsername%>/followers" class="profile-nav-link nav-item nav-link <%= currentPage == 'followers' ?'active':''%>">Followers: 3</a>
+          <a href="/profile/<%=profileUsername%>/following" class="profile-nav-link nav-item nav-link <%= currentPage == 'following' ?'active':''%>">Following: 2</a>
         </div>
