--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -1,8 +1,9 @@
-<%-include('includes/header')%>
+
+<%- include('includes/header') %>
 
 <div class="container py-md-5">
-   
-  <%- include('includes/flash')%>
+
+  <%- include('includes/flash') %>
 
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
@@ -11,15 +12,17 @@
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
-        <%regErrors.forEach(function(message){%>
-          <div class="alert alert-danger small"><%=message%></div>
-          <%})%>
+
+        <% regErrors.forEach(function(message) { %>
+          <div class="alert alert-danger small"><%= message %></div>
+        <% }) %>
+
           <div class="form-group">
             <label for="username-register" class="text-muted mb-1"><small>Username</small></label>
             <input name="username" id="username-register" class="form-control" type="text" placeholder="Pick a username" autocomplete="off">
           </div>
           
-          <div class="form-group"> 
+          <div class="form-group">
             <label for="email-register" class="text-muted mb-1"><small>Email</small></label>
             <input name="email" id="email-register" class="form-control" type="text" placeholder="you@example.com" autocomplete="off">
           </div>
@@ -29,6 +32,7 @@
             <input name="password" id="password-register" class="form-control" type="password" placeholder="Create a password">
           </div>
           
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button type="submit" class="py-3 mt-4 btn btn-lg btn-primary btn-block">Sign up for Treep</button>
           
         </form>
@@ -36,4 +40,4 @@
     </div>
   </div>
   
-<%- include('includes/footer')%>
+<%- include('includes/footer') %>
