--- a/views/includes/profileShared.ejs
+++ b/views/includes/profileShared.ejs
@@ -1,11 +1,14 @@
+
 <h2><img class="avatar-small" src="<%= profileAvatar %>"> <%= profileUsername %> 
   <% if (user && !isVisitorsProfile) {
     if (isFollowing) { %>
       <form class="ml-2 d-inline" action="/removeFollow/<%= profileUsername %>" method="POST">          
-        <button class="btn btn-danger btn-sm">UnFollow <i class="fas fa-user-times"></i></button>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+        <button class="btn btn-danger btn-sm">UnFollow<i class="fas fa-user-times"></i></button>
       </form>
    <% } else { %>
       <form class="ml-2 d-inline" action="/addFollow/<%= profileUsername %>" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn btn-primary btn-sm">Follow <i class="fas fa-user-plus"></i></button>
       </form>
    <% }
