--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <!-- footer begins -->
 <footer class="border-top text-center small text-muted py-3">
-    <p class="m-0">Copyright &copy; 2020 <a href="/" class="text-muted">Treep</a>🌴. All rights reserved. &nbsp;&nbsp;&nbsp;Powered by: <a href="https://www.mongodb.com/" >MongoDB</a> &nbsp; &nbsp;&nbsp; <a href="https://www.heroku.com/" >Heroku</a> &nbsp;&nbsp;&nbsp; <a href="https://www.github.com/" >GitHub</a> </p>
+    <p class="m-0">Copyright &copy; 2020 <a href="/" class="text-muted">Treep</a>🌴. All rights reserved. &nbsp;&nbsp;&nbsp;Powered by: <a href="https://www.mongodb.com/" >MongoDB</a> &nbsp; &nbsp;&nbsp; <a href="https://www.heroku.com/" >Heroku</a> &nbsp;&nbsp;&nbsp; <a href="https://github.com/Jesse-Bett/Treep" >GitHub</a> </p>
   </footer>
 
   <% if (user){%>
